# greenhouse_org

./: .gitignore  README.md  agent_original_instructions.md  baseline_metrics.json  cleanup_movie10.py  debug_blur.py  debug_displace.py  debug_nodes.py  final_cleanup.py  fix_all_tests.py  fix_tests.py  g_log.md  g_memory.md  inspect_action.py  list_nodes.py  new_defs.txt  original_defs.txt  original_style.py  probe_action.py  run_unit_test.js  task.md  verify_anatomy.py  verify_batch_2.js  verify_brain_final.py  verify_changes.py  verify_dopamine.py  verify_emotion_diagrams.py  verify_emotion_v2.py  verify_enhancements.py  verify_errors.js  verify_errors.py  verify_final.py  verify_neuro.js  verify_stress_overlap.py  verify_stress_v3.py  vision_report.csv  vision_report10999.csv  vision_report88888.csv
docs/: dna.html  (+186 more)
scripts/blender/movie/c/: .clang-format  CMakeLists.txt  Makefile  README.md  bootstrap.sh  check_dev.sh  qc_scanner  scenes.config
scripts/blender/movie/c/bench/: kernel_bench.cpp
scripts/blender/movie/c/cmake/: options.cmake  targets.cmake
scripts/blender/movie/c/docs/: architecture.md
scripts/blender/movie/c/include/: AssetManager.hpp  GeometryCore.hpp  MathCore.hpp  MeshMath.hpp  Renderer.hpp  SceneNodes.hpp  Shaders.hpp  status.h  threading.h
scripts/blender/movie/c/src/: CurveEvaluator.hpp  GeometryCore.hpp  GeometryOps.hpp  MeshLoader.hpp  Renderer.hpp  SceneLoader.hpp  SceneNodes.hpp  bindings.cpp  mesh_math.cpp  movie_core.cpp  movie_engine.cpp  movie_plugin.cpp  orchestrator.cpp  qc_scanner.cpp
scripts/blender/movie/c/test/: README.md
(+2101 files in other folders)
